--- a/src/apps/cold-drip-timer/style/ripple.scss
+++ b/src/apps/cold-drip-timer/style/ripple.scss
@@ -1,6 +1,6 @@
-@import './variables.scss';
-@import './helpers/_mixins.scss';
-@import './helpers/_placeholders.scss';
+@import '../../../style/helpers/_variables';
+@import '../../../style/helpers/_mixins.scss';
+@import '../../../style/helpers/_placeholders.scss';
 
 .ripple-container {
   position: absolute;
