--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import './helpers/_variables';
 
 html, body {
   margin: 0;
@@ -24,4 +24,4 @@ h1 {
   overflow: hidden;
   background-color: $white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-} 
+}
