--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -17,11 +17,17 @@ h1 {
 
 .app-div {
   margin: 0 auto;
-  height: 34em;
+  height: 46em;
   padding: 0;
   width: 100%;
-  max-width: 70em;
+  max-width: 52em;
   overflow: hidden;
   background-color: $white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.section {
+  position: relative;
+  top: -3em;
+  height: 23em;
 }
