--- a/src/apps/cold-drip-timer/style/play-button.scss
+++ b/src/apps/cold-drip-timer/style/play-button.scss
@@ -1,8 +1,8 @@
-@import '../../../style/helpers/variables';
+@import '../../../style/helpers/_variables';
+@import '../../../style/helpers/_mixins';
 
 .play-button-div {
-  position: absolute;
-  top: 90%;
+  @include super-center($top: 100%, $left: auto, $x: 0);
   right: 10%;
-  z-index: 10;
+  z-index: 20;
 }
