--- a/src/apps/cold-drip-timer/style/tempo-view.scss
+++ b/src/apps/cold-drip-timer/style/tempo-view.scss
@@ -1,10 +1,9 @@
 @import '../../../style/helpers/_variables';
+@import '../../../style/helpers/_mixins';
 
 .tempo-view-div {
+  @include super-center($left:  7%, $x: 0);
   font-family: $font;
-  position: absolute;
-  top: 48%;
-  left: 7%;
   font-size: 1.2em;
   font-weight: 100;
   color: $white;
