--- a/src/style/helpers/_mixins.scss
+++ b/src/style/helpers/_mixins.scss
@@ -20,3 +20,12 @@
         box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
     }
 }
+
+@mixin super-center ($top: 50%, $left: 50%, $x: -50%, $y: -50%) {
+  position: absolute;
+  top: $top;
+  left: $left;
+  -webkit-transform: translate($x,$y);
+  -ms-transform: translate($x,$y);
+  transform: translate($x,$y);
+}
