--- a/src/style/helpers/_placeholders.scss
+++ b/src/style/helpers/_placeholders.scss
@@ -12,3 +12,13 @@
   animation: ripple-animation 1.25s;
   animation-timing-function: ease-out;
 }
+
+%full-position {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+}
