--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -24,7 +24,7 @@ h1 {
     width: 100%;
 }
 
-.app-div {
+.sub-app {
     @include super-center;
     @include box-shadow(2);
     margin: 0 auto;
@@ -37,7 +37,7 @@ h1 {
     z-index: 10;
 }
 
-.app-div-outter {
+.sub-app-outter {
   @extend %full-position;
   z-index: 5;
 }
