--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -18,6 +18,12 @@ h1 {
     text-align: center;
 }
 
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 .app-container {
     position: relative;
     height: 100vh;
