--- a/src/sub-apps/brew-calculator/style/bottom-section.scss
+++ b/src/sub-apps/brew-calculator/style/bottom-section.scss
@@ -16,13 +16,20 @@
   width: 33.33%;
   height: 25%;
   float: left;
-  border: 1px solid $lightgrey;
+  border-color: $lightgrey;
+  border-style: solid;
+  border-width: 1px 1px 0 1px;
   &:hover,
   &:focus {
     cursor: pointer;
     background-color: $offwhite;
   }
+  &:nth-child(3n+2) {
+    border-width: 1px 0 0 0;
+  }
 }
+
+
 
 .number-btn-num {
   @include super-center;
