--- a/src/sub-apps/brew-calculator/style/top-section.scss
+++ b/src/sub-apps/brew-calculator/style/top-section.scss
@@ -1,1 +1,7 @@
+@import '../../../style/helpers/_variables';
+@import '../../../style/helpers/_mixins';
+@import '../../../style/helpers/_placeholders';
 
+.brew-section-top {
+  background-color: $grey;
+}
