--- a/src/sub-apps/brew-calculator/style/top-section.scss
+++ b/src/sub-apps/brew-calculator/style/top-section.scss
@@ -2,6 +2,10 @@
 @import '../../../style/helpers/_mixins';
 @import '../../../style/helpers/_placeholders';
 
+.app-bar {
+  background-color: material-color('teal', '900') !important;
+}
+
 .brew-section-top {
   background-color: $grey;
 }
