--- a/src/style/helpers/_placeholders.scss
+++ b/src/style/helpers/_placeholders.scss
@@ -22,3 +22,11 @@
   height: 100%;
   width: 100%;
 }
+
+%unselectable {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
