--- a/src/sub-apps/brew-calculator/style/bottom-section.scss
+++ b/src/sub-apps/brew-calculator/style/bottom-section.scss
@@ -31,6 +31,7 @@
 
 .number-btn-num {
   @include super-center;
+  @extend %unselectable;
   font-family: $font;
   font-size: 1.3em;
   color: $black;
