--- a/src/sub-apps/brew-calculator/style/calc-modes.scss
+++ b/src/sub-apps/brew-calculator/style/calc-modes.scss
@@ -3,17 +3,21 @@
 @import '../../../style/helpers/_placeholders';
 
 
-[class*="-calc-container"] {
+.brew-block {
   position: relative;
   width: 100%;
   height: 33.33%;
+  &:hover,
+  &:focus {
+    cursor: pointer;
+  }
 }
 
-[class*="-calc-container"].result {
+.brew-block.result {
   background-color: $offwhite;
 }
 
-[class*="-calc-container"].second {
+.brew-block.second {
   border-top: 1px solid $lightgrey;
 }
 
