--- a/src/sub-apps/brew-calculator/style/calc-modes.scss
+++ b/src/sub-apps/brew-calculator/style/calc-modes.scss
@@ -7,6 +7,9 @@
   position: relative;
   width: 100%;
   height: 33.33%;
+}
+
+.brew-block:not(.result) {
   &:hover,
   &:focus {
     cursor: pointer;
