blocks now configure based on what mode they are in

--- a/src/sub-apps/brew-calculator/style/calc-modes.scss
+++ b/src/sub-apps/brew-calculator/style/calc-modes.scss
@@ -2,6 +2,9 @@
 @import '../../../style/helpers/_mixins';
 @import '../../../style/helpers/_placeholders';
 
+.brew-block-container {
+  height: 100%;
+}
 
 .brew-block {
   position: relative;
