styling fonts and cleaning code

--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -16,8 +16,9 @@ $grey: rgb(189,189,189);
 
 /*******Font*******/
 
-$extra-large: 3em;
+$extra-large: 3.5em;
 $large: 2em;
+$medium: 1.5em;
 $small: 1em;
 
 $h1-size: $extra-large;
