--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -7,21 +7,29 @@
 
 /*******Color*******/
 
-$black: rgb(80,80,80);
-$white: #fff;
-$offwhite: rgb(245,245,245);
-$lightgrey: rgb(225,225,225);
-$grey: rgb(189,189,189);
+$black:       rgb(80,80,80);
+$white:       #fff;
+$offwhite:    rgb(245,245,245);
+$lightgrey:   rgb(225,225,225);
+$grey:        rgb(189,189,189);
 
 
 /*******Font*******/
 
 $extra-large: 3.5em;
-$large: 2em;
-$medium: 1.5em;
-$small: 1em;
+$very-large:  3em;
+$large:       2em;
+$medium:      1.5em;
+$small:       1em;
 
-$h1-size: $extra-large;
-$p-size: $small;
+$h1-size:     $extra-large;
+$p-size:      $small;
 
-$font: 'Roboto', sans-serif;
+$font:        'Roboto', sans-serif;
+
+
+/*******Animation*******/
+
+$easeOut   : cubic-bezier(0.190, 1.000, 0.220, 1.000);
+$easeIn    : cubic-bezier(0.950, 0.050, 0.795, 0.035);
+$easeInOut : cubic-bezier(1.000, 0.000, 0.000, 1.000);
