--- a/src/sub-apps/brew-calculator/style/calc-modes.scss
+++ b/src/sub-apps/brew-calculator/style/calc-modes.scss
@@ -37,14 +37,18 @@
   }
 
   .brew-name {
-    @include super-center($top: 10%, $y: 0);
+    @include super-center($top: 18%, $y: 0);
     font-size: $small;
-    color: rgba(material-color('teal', '800'), 0.75);
+    color: rgba(255,255,255,1);
+    text-transform: uppercase;
+    border-bottom: 2px solid rgba(0, 77, 64, 0.5);
+    padding-bottom: 0.3em;
   }
 
   .brew-value {
     @include super-center();
-    font-size: $extra-large;
+    font-size: $very-large;
+    transition: 0.3s $easeOut;
   }
 
   .brew-unit {
@@ -57,12 +61,13 @@
   }
 }
 
-.brew-block:first-child {
-  border-right: 1px solid rgba($black, 0.15);
-}
-
 .brew-block.selected {
-  border: 4px solid $black;
+    background-color: material-color('teal','400');
+
+    .brew-value {
+      font-size: $extra-large;
+      transition: 0.3s $easeOut;
+    }
 }
 
 
