trying to make keypad its own reuseable component

--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -21,6 +21,7 @@ $very-large:  3em;
 $large:       2em;
 $medium:      1.5em;
 $small:       1em;
+$tiny:        0.8em;
 
 $h1-size:     $extra-large;
 $p-size:      $small;
