--- a/src/sub-apps/brew-calculator/style/calc-modes.scss
+++ b/src/sub-apps/brew-calculator/style/calc-modes.scss
@@ -37,11 +37,10 @@
   }
 
   .brew-name {
-    @include super-center($top: 20%);
+    @include super-center($top: 15%, $left: 15%);
     font-size: $tiny;
     color: rgba(0, 77, 64, 0.9);
     text-transform: uppercase;
-    border-bottom: 2px solid rgba(0, 77, 64, 0.6);
     padding-bottom: 0.3em;
   }
 
