--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -12,6 +12,7 @@ $white:       #fff;
 $offwhite:    rgb(245,245,245);
 $lightgrey:   rgb(225,225,225);
 $grey:        rgb(189,189,189);
+$matteblack:  rgb(0,0,0);
 
 
 /*******Font*******/
@@ -34,3 +35,6 @@ $font:        'Roboto', sans-serif;
 $easeOut   : cubic-bezier(0.190, 1.000, 0.220, 1.000);
 $easeIn    : cubic-bezier(0.950, 0.050, 0.795, 0.035);
 $easeInOut : cubic-bezier(1.000, 0.000, 0.000, 1.000);
+
+$slow: 0.75s;
+$fast: 0.3s;
