fixed issue with switching tabs and blocks being janky

--- a/src/sub-apps/brew-calculator/style/modes.scss
+++ b/src/sub-apps/brew-calculator/style/modes.scss
@@ -75,7 +75,7 @@
 .brew-block.selected {
     background-color: material-color('teal','400');
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    transition: $fast $easeOut;
+    transition: box-shadow $fast $easeOut;
 
     .brew-value {
       font-size: $extra-large;
