cleaned code, created a single num-pad scss file, finished roasting moisture calculator

--- a/src/style/components/num-pad.scss
+++ b/src/style/components/num-pad.scss
@@ -1,6 +1,6 @@
-@import '../../../style/helpers/_variables';
-@import '../../../style/helpers/_mixins';
-@import '../../../style/helpers/_placeholders';
+@import '../helpers/_variables';
+@import '../helpers/_mixins';
+@import '../helpers/_placeholders';
 
 .number-container {
   @extend %full-position;
