--- a/src/style/components/input-blocks.scss
+++ b/src/style/components/input-blocks.scss
@@ -88,7 +88,7 @@
 
 /*******BLOCK: STACKED*******/
 
-.block.stacked {
+.section.stacked .block {
   display: block;
   height: calc(50% - 2em);
   width: calc(100% - 2em);
@@ -96,6 +96,7 @@
   .block-name {
     @include super-center(50%, 10%, 0%);
     color: material-color('yellow', 'a200');
+    font-size: 1.1rem;
   }
   .block-value {
     @include super-center($left: 70%);
@@ -106,6 +107,17 @@
   &:nth-child(2) {
     margin: 0.5em 1em 1em 1em;
   }
+}
+
+.section.stacked .block-result-div {
+  @extend %full-position;
+}
+
+.section.stacked .block-result {
+  @include super-center($top: calc(50% - 0.5em));
+  font-size: 2.33rem;
+  width: 10em;
+  text-align: center;
 }
 
 
