--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -24,6 +24,7 @@ html {
 
 body {
     background-color: $offwhite;
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'><g fill-rule='evenodd'><g id='hexagons' fill='%23e8e8e8' fill-opacity='0.4' fill-rule='nonzero'><path d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/></g></g></svg>");
 }
 
 h1 {
@@ -49,7 +50,7 @@ h1 {
     width: 100%;
     max-width: 52em;
     overflow: hidden;
-    background-color: #fff;
+    background-color: $white;
     z-index: 10;
 }
 
@@ -63,9 +64,13 @@ h1 {
     z-index: 1;
 }
 
+.body-blur {
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'><defs><filter id='f1' x='0' y='0'><feGaussianBlur in='SourceGraphic' stdDeviation='3' /></filter></defs><g fill-rule='evenodd'><g id='hexagons' fill='%23e8e8e8' fill-opacity='0.4' fill-rule='nonzero'><path d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z' filter='url(#f1)'/></g></g></svg>");
+}
+
 .home-blur {
   filter: blur(15px);
-  background-color: rgba(0,0,0,0.05);
+  background-color: rgba($white, 0.05);
 }
 
 
