started designing menu items

--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -7,7 +7,7 @@
 
 /*******Color*******/
 
-$black:       rgb(80,80,80);
+$black:       rgb(0, 0, 0);
 $white:       #fff;
 $offwhite:    rgb(245,245,245);
 $lightgrey:   rgb(225,225,225);
