--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -38,3 +38,8 @@ $easeInOut : cubic-bezier(1.000, 0.000, 0.000, 1.000);
 
 $slow: 0.75s;
 $fast: 0.3s;
+
+
+/******* Size *******/
+
+$circle-size: 10em;
