fixed cold drip styling and a webpack dev server issue

--- a/src/sub-apps/cold-drip-timer/style/tempo-slider.scss
+++ b/src/sub-apps/cold-drip-timer/style/tempo-slider.scss
@@ -13,7 +13,7 @@
   width: calc(100% - 100px);
 }
 
-.tempo-slider > div > div > div:first-child {
+.tempo-slider > div > div:first-child {
   background-color: $grey !important;
 }
 
