--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -42,6 +42,10 @@ h1 {
 }
 
 .sub-app {
+   /*temp*/
+   display: none;
+   /**** ****/
+
     @include super-center;
     @include box-shadow(2);
     margin: 0 auto;
@@ -51,6 +55,8 @@ h1 {
     max-width: $app-width;
     overflow: hidden;
     background-color: $white;
+    animation: appOpen $app-speed $easeOut;
+    animation-fill-mode: forwards;
     z-index: 10;
 }
 
@@ -62,6 +68,11 @@ h1 {
 .home-container {
     @extend %full-position;
     z-index: 1;
+}
+
+.title {
+  margin: 0;
+  height: 2em;
 }
 
 .body-blur {
@@ -114,6 +125,24 @@ h1 {
 .section-bottom.big-top {
   height: 40.1%;
   background-color: $white;
+}
+
+
+/******* ANIMATIONS *******/
+
+@keyframes appOpen {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0);
+  }
+  13% {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
 }
 
 
