--- a/src/style/components/home-menu.scss
+++ b/src/style/components/home-menu.scss
@@ -6,41 +6,31 @@
 /******* HOME MENU *******/
 
 .menu-container {
-    width: 100%;
-    height: auto;
-    margin: 5em auto;
+    @extend %full-position;
+    margin: 0 auto 1px;
 }
-
-.menu-row {
-  position: relative;
-  margin: 0 auto;
-  width: calc(100% - 5em);
-  max-width: 70em;
-  height: 12em;
-
-  &:after {
-      content: "";
-      display: table;
-      clear: both;
-  }
-}
-
 
 /******* MENU ITEMS *******/
 
 .menu-item-container {
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
     display: inline-block;
     width: 25%;
-    height: 100%;
-    float: left;
+    height: 25em;
+    transition: all $app-speed $easeOut;
 
     .menu-circle {
-        @include super-center();
-        width: $circle-size;
-        height: $circle-size;
-        border-radius: 20em;
-        background-color: $black;
+      position: relative;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: $circle-size;
+      height: $circle-size;
+      border-radius: $circle-size;
+      background-color: $black;
+      animation: circle-close $app-speed $easeOut;
     }
 
     svg:not(.menu-text) {
@@ -63,6 +53,87 @@
     }
 }
 
+
+/******* MENU ITEMS GRID LAYOUT *******/
+
+.menu-item-container {
+  // &:nth-child(n+1):nth-child(-n+4):not(.active) { top: 10%; }
+
+  &:nth-child(1) { transform: translate(-200%, -100%); }
+  &:nth-child(2) { transform: translate(-100%, -100%); }
+  &:nth-child(3) { transform: translate(0%, -100%); }
+  &:nth-child(4) { transform: translate(100%, -100%); }
+}
+
+
+/******* OPEN MODE *******/
+
+.menu-item-container.active {
+  transform: translate(-50%,-50%);
+  transition: all $app-speed;
+  animation: container-expand $app-speed $easeOut;
+  animation-delay: $app-delay;
+  animation-fill-mode: forwards;
+  z-index: 2;
+
+  .menu-circle {
+    z-index: 12;
+    animation: circle-expand $app-speed;
+    animation-delay: $app-delay;
+    animation-fill-mode: forwards;
+  }
+  svg {
+    display: none !important;
+  }
+}
+
+
+/******* ANIMATIONS *******/
+
+@keyframes circle-expand {
+  0% {
+    width: $circle-size;
+    height: $circle-size;
+    border-radius: $circle-size;
+  }
+  100% {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+}
+@keyframes circle-close {
+  0% {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+  100% {
+    width: $circle-size;
+    height: $circle-size;
+    border-radius: $circle-size;
+  }
+}
+@keyframes container-expand {
+  0% {
+    width: 25%;
+    height: 25em;
+  }
+  100% {
+    width: $app-width;
+    height: $app-height;
+  }
+}
+@keyframes container-close {
+  0% {
+    width: $app-width;
+    height: $app-height;
+  }
+  100% {
+    width: 25%;
+    height: 25em;
+  }
+}
 
 /******* MEDIA QUERIES *******/
 
