--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -52,6 +52,8 @@ $easeInOut : cubic-bezier(1.000, 0.000, 0.000, 1.000);
 
 $slow: 0.75s;
 $fast: 0.3s;
+$app-speed: 0.8s;
+$app-delay: 150ms;
 
 
 /******* Size *******/
