--- a/src/style/transitions.scss
+++ b/src/style/transitions.scss
@@ -1,17 +1,3 @@
-@import '../../../style/helpers/_variables';
-@import '../../../style/helpers/_mixins';
-@import '../../../style/helpers/_placeholders';
-
-
-.sub-open {
-  .menu-row {
-    position: static;
-  }
-  .menu-circle {
-    width: 100%
-    max-width: $app-width;
-    height: $app-height;
-    border-radius: 0;
-    transform: translate(50%,90%);
-  }
-}
+@import './helpers/_variables';
+@import './helpers/_mixins';
+// @import './helpers/_placeholders';
