--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -42,9 +42,7 @@ h1 {
 }
 
 .sub-app {
-   /*temp*/
-   display: none;
-   /**** ****/
+    $speed: 600ms;
 
     @include super-center;
     @include box-shadow(2);
@@ -53,9 +51,11 @@ h1 {
     padding: 0;
     width: 100%;
     max-width: $app-width;
+    opacity: 0;
     overflow: hidden;
     background-color: $white;
-    animation: appOpen $app-speed $easeOut;
+    animation: appOpen $speed ease-in;
+    animation-delay: $speed;
     animation-fill-mode: forwards;
     z-index: 10;
 }
@@ -133,12 +133,12 @@ h1 {
 @keyframes appOpen {
   0% {
     opacity: 0;
-    transform: translate(-50%, -50%) scale(0);
+    transform: translate(-50%, -50%) scale(1);
   }
-  13% {
-    opacity: 0;
-    transform: translate(-50%, -50%) scale(0);
-  }
+  // 0% {
+  //   opacity: 0;
+  //   transform: translate(-50%, -50%) scale(1);
+  // }
   100% {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
