--- a/src/style/components/input-blocks.scss
+++ b/src/style/components/input-blocks.scss
@@ -11,7 +11,7 @@
 }
 
 .block-container {
-  background-color: $_100;
+  background-color: $app-bg;
   height: 100%;
 
     &:after {
@@ -31,7 +31,7 @@
   display: inline-block;
   width: calc(50% - 1.5em);
   height: calc(66.66% - 2em);
-  background-color: $_800;
+  background-color: $block-color;
 
   .block-name {
     @include super-center($top: 15%, $left: 15%);
@@ -70,7 +70,7 @@
 }
 
 .block.selected {
-  background-color: $_700;
+  background-color: $block-selected-color;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   transition: box-shadow $fast $easeOut;
 
@@ -97,7 +97,7 @@
 
   .block-name {
     @include super-center(25%, 5%, 0%);
-    color: $black;
+    color: $block-text-color;
     font-size: 1.1rem;
   }
   .block-value {
@@ -127,13 +127,13 @@
 
 .block:nth-child(3) {
   display: block;
-  background-color: $_100;
+  background-color: transparent;
   width: 100%;
   height: 33.33%;
 
   .block-result {
     @include super-center();
     font-size: $medium;
-    color: $black;
+    color: $result-text-color;
   }
 }
