--- a/src/style/helpers/_variables.scss
+++ b/src/style/helpers/_variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100, 400');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
 
 /*******Material Color*******/
 
@@ -41,7 +41,9 @@ $tiny:         0.8em;
 $h1-size:      $extra-large;
 $p-size:       $small;
 
-$font:         'Roboto', sans-serif;
+$depot:        "depot-new-condensed-web",sans-serif;
+$roboto:       'Roboto Condensed', sans-serif;
+$font:         $roboto;
 
 
 /*******Animation*******/
@@ -52,7 +54,7 @@ $easeInOut : cubic-bezier(1.000, 0.000, 0.000, 1.000);
 
 $slow:      0.75s;
 $fast:      0.3s;
-$app-speed: 0.8s;
+$app-speed: 0.4s;
 $app-delay: 150ms;
 
 
@@ -61,3 +63,20 @@ $app-delay: 150ms;
 $app-width:   52em;
 $app-height:  46em;
 $circle-size: 10em;
+
+
+/******* Components *******/
+
+$primary:             $white;
+$secondary:           $black;
+
+$app-bg:                  $primary;
+$block-color:             $secondary;
+$block-selected-color:    $_800;
+$block-text-color:        $primary;
+$result-text-color:       $secondary;
+
+$keypad-color:            $primary;
+$keypad-hover-color:      $_300;
+$keypad-border-color:     $keypad-hover-color;
+$keypad-text-color:       $secondary;
