--- a/src/sub-apps/roast-moisture-calculator/style/top-section.scss
+++ b/src/sub-apps/roast-moisture-calculator/style/top-section.scss
@@ -2,20 +2,20 @@
 @import '../../../style/helpers/_mixins';
 @import '../../../style/helpers/_placeholders';
 
-.brew-section-top {
-  background-color: $grey;
-}
-
-
-/*******Tabs*******/
-
-.brew-tabs {
-  height: 100%;
-}
-
-.brew-tabs > div:nth-child(3) {
-  height: calc(100% - 48px);
-  > div {
-    height: 100%;
-  }
-}
+// .brew-section-top {
+//   background-color: $grey;
+// }
+//
+//
+// /*******Tabs*******/
+//
+// .brew-tabs {
+//   height: 100%;
+// }
+//
+// .brew-tabs > div:nth-child(3) {
+//   height: calc(100% - 48px);
+//   > div {
+//     height: 100%;
+//   }
+// }
