--- a/src/sub-apps/roast-development-calculator/style/input-blocks.scss
+++ b/src/sub-apps/roast-development-calculator/style/input-blocks.scss
@@ -1,9 +1,6 @@
 @import '../../../style/helpers/_variables';
-// @import '../../../style/helpers/_mixins';
-// @import '../../../style/helpers/_placeholders';
-// @import '../../../style/components/input-blocks.scss';
 
-/*******TIME PICKER*******/
+/*******BLOCK INPUT*******/
 
 .rdev-block .time-picker {
     $text: $white;
